# QXTI

./: .gitignore  CMD.py  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  QXTI_reference.md  README.md  main.py  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
docs/: ARCHITECTURE.md  GITHUB_SETUP.md  HAMILTONIAN.md  LASER.md
qxti/CMD/CMD principal/: CMD.py  CMD2.py
qxti/CMD/Distributions/: Bose.py
qxti/physics/: __init__.py  hamiltonian.py  laser.py  laser_system.py
tests/: test_hamiltonian.py  test_laser.py  test_laser_system.py
