[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "qxti"
version = "0.1.0"
description = "Quantum X Tight-binding Interface for perturbative optical-response simulations."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [
    { name = "Victor" }
]
keywords = ["physics", "tight-binding", "optics", "quantum", "simulation"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Physics"
]
dependencies = [
    "numpy>=1.26",
]

[project.optional-dependencies]
test = [
    "matplotlib>=3.8",
    "pytest>=8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools.packages.find]
include = ["qxti*"]
